Update environment configuration for local development and Firebase settings

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@
 PORT=3001
 
 # Client URL
-CLIENT_URL=
+CLIENT_URL= # backend url
 
 # JWT secret (if using JWT for authentication)
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=jwt_secret
 
 # Other configuration settings
 
@@ -16,7 +16,7 @@ FIREBASE_CLIENT_EMAIL=
 FIREBASE_DATABASE_URL=
 
 # Example: Email server settings
-EMAIL_HOST=smtp.your-email.com
-EMAIL_PORT=587
-EMAIL_USER=your-email@example.com
-EMAIL_PASS=your-email-password
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASS=
