Update environment configuration and modify CORS settings for development

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 # Server configuration
 PORT=3001
 
+# Node environment
+NODE_ENV=development # or production
+
 # Client URL
 CLIENT_URL=localhost:3001 # backend url
 BASE_URL=localhost:3001 # backend url
