--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,9 @@
     "noFallthroughCasesInSwitch": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["src/**/*", "index.ts"],
+  "include": ["src/**/*", "index.ts", "src/types/**/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
